# agent

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
agent/: README.md
agent/simple_agent/: config.py  main.py
datasets/: README.md
datasets/task_tracker/: blocked-task.json  epic-and-task.json  needs-info.json  simple-task.json  test-task.json
docs/: architecture.md  development-constraints.md  index.md  local-development.md  manual-smoke.md  mcp-task-tracker-emulator.md  mcp-task-tracker-tools.md  prompt-assembly.md  storage.md  task-selection.md  tool-safety.md
docs/adr/: 0001-python-library-runtime-fastapi-service.md  0002-development-workflow-and-local-runtime.md  0003-mcp-task-tracker-emulator.md  0004-sqlite-storage-with-repository-layer.md  0005-litellm-provider-layer.md  0006-stateless-business-behavior-with-local-observability.md  0007-project-profile-and-prompt-assembly.md  README.md
emulator/: README.md
emulator/task_tracker_emulator/: __init__.py  errors.py  main.py  models.py  server.py  store.py  tool_docs.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.test.tsx  main.tsx  styles.css
planning/: README.md  feature-requests.md  mvp-roadmap.md  stage-checklist.md  technical-debt.md
scripts/: reset_sandbox.sh  run_agent.sh
simple_agent/: __init__.py  config.py  main.py
simple_agent/service/: app.py  (+6 more)
tests/: README.md  test_api_observability.py  test_health.py  test_storage.py  test_task_selection.py  test_tracker_emulator_server.py  test_tracker_emulator_store.py
(+61 files in other folders)
