[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-agent"
version = "0.1.0"
description = "Autonomous task-driven coding agent MVP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[project.scripts]
simple-agent-api = "simple_agent.main:main"

[tool.setuptools.packages.find]
include = ["simple_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

